[package]
name = "dleq-rs-22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elliptic-curve = { version = "0.12" }
ff = "0.12"
generic-array = "0.14.6"
group = "0.12"
hex-literal = "0.3.4"
k256 = "0.11"
crypto-bigint = { version = "0.4.9", features = ["rand", "generic-array"] }
rand = "0.8.4"
sha2 = "0.10"