[package]
name = "dleq-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = "3.2"
elliptic-curve = { version = "0.12" }
ff = "0.12"
group = "0.12"
hex-literal = "0.3.4"
k256 = "0.11"
crypto-bigint = { version = "0.4.9", features = ["rand", "generic-array"] }
rand = "0.8.4"
sha2 = "0.10"