[package]
name = "dleq-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.2"
bulletproofs = "4.0"
crypto-bigint = { version = "0.4.9", features = ["rand", "generic-array"] }
curve25519-dalek = "3.2"
curve25519-dalek-ng = "4.1"
ff = "0.12"
group = "0.12"
hex-literal = "0.3.4"
k256 = "0.11"
merlin = "3.0.0"
rand = "0.8.4"
sha2 = "0.10"